# autorename

./: .flake8  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  autorename.py  cspell.json  pyproject.toml  pytest.ini  requirements.txt  test_autorename.py
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml  python-app.yml
src/autorename/: __init__.py  autorename.py
tests/: test_autorename.py
