[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorename"
version = "0.1.0"
description = "Rename files based on modification time and MD5 hash"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Matthew Woitaszek"}
]

[project.urls]
Repository = "https://github.com/woitaszek/autorename"

[project.scripts]
autorename = "autorename.autorename:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(name)-24.23s %(funcName)-25s %(levelname)-8s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
