[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorename"
version = "0.1.0"
description = "Rename files based on modification time and MD5 hash"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Matthew Woitaszek" }]

[project.urls]
Repository = "https://github.com/woitaszek/autorename"

[project.scripts]
autorename = "autorename.autorename:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "bandit[toml]>=1.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autorename"]

[tool.ruff]
exclude = ["docs"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 violations, includes blank line rules)
    "F",   # Pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (upgrade syntax for newer Python versions)
    "B",   # flake8-bugbear (likely bugs and design problems)
    "SIM", # flake8-simplify (simplification suggestions)
    "RUF", # Ruff-specific rules
    "D1",  # pydocstyle - missing docstrings
    "D2",  # pydocstyle - docstring formatting
    "D4",  # pydocstyle - docstring content
]
ignore = [
    "SIM108", # Prefer explicit if/else over ternary operator for readability
    "D203",   # Incompatible with D211 (blank line before class)
    "D213",   # Incompatible with D212 (multi-line summary position)
    "D202",   # Allow blank lines after function docstrings
    "D401",   # Imperative mood is overly prescriptive
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Re-exports are intentional in __init__ modules
"tests/**" = ["D"]       # Docstrings not required in test files
"*.ipynb" = ["F821"]     # Undefined names expected in notebook cells

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(name)-24.23s %(funcName)-25s %(levelname)-8s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
